--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
             <div class="tres">
             <p>La naturaleza es sabia y le <strong>proporciona</strong> al ser humano los elementos necesarios <strong>asegurar tu salud</strong></p>
             </div>
-                <div class="limon">
-                <div class="col-xs-12">
-                <div class="box"><img src="images/Desintoxicación.png">
-                </div>
-            </div>
-            </div>
+            
     </section>
 
 
-
+     <section id="limones">
+        <section class="container">
+            <div class="col-xs-12"> 
+            </div>
+        </section>
+    </section>
 
      <section id="seccion2">
         <section class="container">
@@ -91,7 +91,12 @@
             </div>
         </section>
     </section>
-
+    
+   <section id="naranjas">
+                <section class="box">
+                    <img src="images/naranja.png"> 
+                </section>
+     </section>
 
      <section id= "iconos">
         <div class="container">
@@ -100,11 +105,13 @@
                     <p>Tiene acción desintoxicante y depurativa en el organismo, además ayuda a bajar la presión arterial.</p>
                 </div>
             </div>
+
             <div class="col-xs-12" >
             <div class="box"><img src="images/VyM.png">
                  <p>Provee vitaminas para el cuerpo.</p>
                 </div>
             </div>
+
             <div class="col-xs-12" > 
             <div class="box"> <img src="images/Vitalidad.png" >
                     <p>Provee más energía y vitalidad al cuerpo.</p>
@@ -124,6 +131,7 @@
             </div>
         </div>
     </section>
+
 
      <section id="cta">
          <button>Quiero mi E-Book</button>
