--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
 <body>
 
      <header>
-            <section id="head">
-                <div id="um">
+        <section id="head">
+            <div class="row center-xs start-sm">
+            <div id="um">
                     <img src="images/umicon.svg"> 
-                </div>
-                <div id="umvirtual">
-                    <img src="images/umvirtual.svg" class="logoum"> 
-                 </div>
-            </section>
+            </div>
+            </div>
+       
+            <div class="row center-xs end-sm middle-sm">
+            <div id="umvirtual">
+                    <img src="images/umvirtual.svg"> 
+            </div>
+            </div>
+
+        </section>
       
 
 
