--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
 </head>
  
-<body>
+<body"> 
 
      <header>
       <section id="head">
@@ -47,7 +47,9 @@
         </div>
       </section>
       
-
+     <section id="fondo">
+            <div class="body">
+ 
 
              <section id="titulo">
                 <section class="container">
@@ -209,7 +211,8 @@
         </section>
         </section>
 
-
+       </div>
+    </section>
 
 
     <footer class="row center-xs" id="copy">
