--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                     <img src="images/VyM.png">
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-7 center-xs middle-sm first-sm">
+            <div class="col-xs-12 col-sm-7 center-xs middle-sm">
                 <div class="box">
-                    <p>Provee vitaminas para el cuerpo.</p>
+                    <p>Provee vitaminas y antioxidante a nuestro cuerpo los cuales son nutrientes.</p>
                 </div>
             </div>
         </div>
@@ -155,7 +155,7 @@
             </div>
             <div class="col-xs-12 col-sm-7 center-xs middle-sm">
                 <div class="box">
-                    <p>Provee más energía y vitalidad al cuerpo.</p>
+                    <p>Provee más energía, vitalidad y reduce el riesgo de enfermedades.</p>
                 </div>
             </div>
         </div>
@@ -167,9 +167,9 @@
                     <img src="images/Fortalece.png">
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-7 center-xs middle-sm first-sm">
+            <div class="col-xs-12 col-sm-7 center-xs middle-sm">
                 <div class="box">
-                    <p>Fortalece al sistema inmunológico.</p>
+                    <p>Fortalece al sistema inmunológico permitiendo que las toxinas acumuladas sean eliminadas.</p>
                 </div>
             </div>
         </div>
