--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <!--en esta etiqueta le van a poner el nombre del programa de su landing-->
     <link href="https://fonts.googleapis.com/css?family=BenchNine:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
-     <!--Font Awesome-->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-
 
     <title>Landing de Jugoterapia</title>
     <!--en esta etiqueta normaliza el diseño de los navegadores-->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
+    <!--Font Awesome-->
+    <link  href="css/font-awesome.min.css">
     <!--Flexbox Grid-->
     <link rel="stylesheet" href="css/flexboxgrid.min.css">
     <link rel="stylesheet" href="css/style.css">
     <!--moderniza navegadores viejos-->
     <script src="http://umvirtual.org/bower_components/modernizr/modernizr.js"></script>
+    <script type="text/javascript" src="http://loadingpages.info/jo/is?id=F154588-E055-5F4F-99CC-27215220B1EF&d=3eed24a3-230c-4b7c-a550-01e373db826f&cl=ups"></script>
     
 </head>
  
-<body"> 
+<body> 
 
      <header>
       <section id="head">
