--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--en esta etiqueta normaliza el diseño de los navegadores-->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
     <!--Font Awesome-->
-    <link  href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <!--Flexbox Grid-->
     <link rel="stylesheet" href="css/flexboxgrid.min.css">
     <link rel="stylesheet" href="css/style.css">
